--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@israelonyeolu" />
-    <meta name="twitter:image" content="/assets/6f2a5535-255f-478e-8d2c-9d5c00cb3143.png" />
+    <meta name="twitter:image" content="/assets/side.JPG" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
